Set Cache-Control: no-cache on /manifest GET and update swagger.yml
